# HephaestusEngine

./: .gitignore  .gitmodules  CMakeLists.txt  HephaestusEngine.cpp  HephaestusEngine.sln  HephaestusEngine.vcxproj  LICENSE.md  README.md  compressed_vert.cpp  imgui.ini  install.bat  stdafx.h
Executables/Release/shaders/: fragment.glsl
HephaestusEngine/: HephaestusEngine.cpp  HephaestusEngine.sln  HephaestusEngine.vcxproj  HephaestusEngine.vcxproj.filters  LICENSE.txt  Octree.h  ReadMe.txt  SIMD.h  SIMD_AVX.h  Terrain_Gen.h  Terrain_backup.h  array3.h  block.cpp  block.h  camera.h  chunk.cpp  chunk.h  chunkData.txt  chunk_manager.cpp  chunk_manager.h  chunkdata_rle.txt  cmakelists.txt  compressed_fragment.glsl  compressed_vertex.glsl  interval.h  lodepng.c  lodepng.h  mappingfunc.py  mesh.h  mortondata.txt  octreeChunk.cpp  octreeChunk.h  settings_actual.vssettings  shader.h  sky_frag.glsl  sky_vert.glsl  splay.h  stdafx.cpp  stdafx.h  texture.h  (+2 more)
HephaestusEngine/common/: CommonUtil.h  Constants.h  Morton.h  VkDebug.h
HephaestusEngine/deprecated/: chunk.cpp  treeChunk.cpp  treeChunk.h
HephaestusEngine/engine/generation/: NoiseSampler.cpp  NoiseSampler.h  sdnoise1234.cpp  sdnoise1234.h
HephaestusEngine/engine/mesh/: Mesh.h
HephaestusEngine/engine/objects/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Player.h  Region.h
HephaestusEngine/engine/objects/util/: BlockArea.cpp
HephaestusEngine/engine/renderer/: ForwardDecl.h
HephaestusEngine/engine/renderer/core/: Instance.h
HephaestusEngine/engine/renderer/resource/: Allocator.cpp  Allocator.h  PipelineCache.cpp
HephaestusEngine/ext/FastNoise/lib/: FastNoiseSIMD.lib
HephaestusEngine/ext/include/SIMD/: SIMD.h  SIMD_AVX.h  SIMD_Constants.h  SIMD_Math.h  SIMD_Noise.h  SIMD_SSE.h
HephaestusEngine/ext/lib/: LodePNG_GD_x86.idb  LodePNG_GD_x86.lib  LodePNG_x86.lib  SOIL.lib  libnoise.idb  libnoise.iobj  libnoise.ipdb  libnoise.lib
HephaestusEngine/ext/lib/pkgconfig/: glfw3.pc
HephaestusEngine/mesh/: Mesh.cpp  MeshComponents.h  mesh.h
HephaestusEngine/objects/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Light.cpp  Light.h  LinearChunk.cpp  LinearChunk.h  MortonChunk.cpp  MortonChunk.h  Player.h
HephaestusEngine/objects/util/: BlockArea.cpp  BlockArea.h
HephaestusEngine/rendering/: Camera.h  Shader.cpp  Shader.h
HephaestusEngine/rendering/shaders/: vertex.glsl
HephaestusEngine/shaders/: fragment.glsl  vertex.glsl
HephaestusEngine/util/: AABB.h  Block.h  FastNoise.cpp  Mesh.cpp  MeshComponents.h  Morton.h  MortonChunk.cpp  MortonChunk.h  MortonChunkBlockLUT.h  TerrainGen.cpp  TerrainGen.h  Terrain_Gen.h  Viewport.cpp  Viewport.h  camera.h  chunkbuffers.cpp  intervaltree.h  lodeTexture.h  lodepng.cpp  mesh.h  rle.h  shader.h
HephaestusEngine/util/SIMD/: SIMD.h  SIMD_AVX.h  SIMD_Math.h  SIMD_Noise.h  SIMD_SSE.h  SIMD_VecSet.h
HephaestusEngine/util/terrain/: BiomeGenerator.h  GeneratorBase.h  TerrainGen.cpp
Release/: HephaestusEngine.iobj  HephaestusEngine.ipdb
assets/shaders/terrain/: block.frag  block.frag.spv
assets/textures/arrays/: blocks_bc7.dds  blocks_ktx.ktx
common/: CommonUtil.h  Constants.h  VkDebug.h  vk_constants.h
engine/: CMakeLists.txt  GUI_Elements.h  MeshingTest.h
engine/generation/: NoiseGen.cpp  NoiseGen.h  NoiseSampler.cpp  NoiseSampler.h  TerrainGenerator.cpp  sdnoise1234.cpp
engine/include/common/: BlockTypes.hpp  Constants.hpp
engine/include/ecs/: identifier.hpp  runtime_view.hpp  view.hpp
engine/include/objects/: Block.hpp  Chunk.hpp  ChunkManager.hpp  ChunkMesh.hpp  Light.hpp
engine/include/util/: CommonUtil.hpp  Morton.hpp  delegate.hpp  multicast_delegate.hpp  rle.hpp
engine/include/voxel/: VoxelSampler.hpp  VoxelVolume.hpp
engine/mesh/: Mesh.h
engine/objects/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h
engine/objects/util/: Inventory.h
engine/src/generation/: NoiseGen.cpp
engine/src/objects/: Chunk.cpp  ChunkManager.cpp  ChunkMesh.cpp
include/: stdafx.h
include/common/: CommonUtil.h  CommonUtil.hpp  Constants.hpp  Morton.hpp
include/ecs/: entity.hpp  registry.hpp  sort_algorithms.hpp  sparse_set.hpp
include/engine/: MeshingTest.h  MeshingTest.hpp
include/engine/generation/: TerrainGenerator.h
include/engine/mesh/: Mesh.hpp  MeshComponents.h
include/engine/objects/: Block.h  Block.hpp  Chunk.h  Chunk.hpp  ChunkManager.hpp  ChunkMesh.hpp
include/engine/scenes/: GUI_Elements.hpp
include/objects/: Block.hpp  BlockTypeDescription.hpp  Chunk.hpp
include/util/: Morton.h
rsrc/shader_cache/: 55576.vkdat  60439.vkdat
rsrc/shaders/: debug.frag  debug.vert
rsrc/shaders/terrain/: block.frag  block.frag.spv  block.vert  block.vert.spv
rsrc/textures/arrays/: blocks_bc7.dds
scenes/: BaseScene.cpp
src/engine/generation/: NoiseGen.cpp
src/engine/objects/: Block.cpp  Chunk.cpp  ChunkManager.cpp  ChunkMesh.cpp  Light.cpp
src/objects/: ChunkManager.cpp  Light.cpp
src/util/: lodepng.cpp
tests/: HephaestusEngine.cpp  MeshingTest.cpp  MeshingTest.hpp
util/: Parallel.h
util/terrain/: GeneratorBase.cpp  TerrainCommon.h
x64/Debug/: HephaestusEngine.exp  HephaestusEngine.lib  Settings.cap
(+20 files in other folders)
